--- a/src/main/webapp/css/info_style.css
+++ b/src/main/webapp/css/info_style.css
@@ -1,5 +1,9 @@
 @media (max-width: 780px) {
+    header {
+        text-align: center;
+    }
     ul {
+        justify-content: center;
         display: block;
         width: 100%;
     }
